# libnlif

./: .gitignore  .gitmodules  README.md  meson.build  setup.py
bioneuron/: bioneuron.cpp  bioneuron.h  bioneuron.py  threadpool.cpp  threadpool.hpp
bioneuronqp/: __init__.py  bioneuronqp.cpp  bioneuronqp.h  bioneuronqp.py  threadpool.cpp  threadpool.hpp
bioneuronqp/tests/: test_bioneuronqp.py
examples/: compare_cvxopt_osqp.ipynb
libnlif/cpp/solver/: solver.cpp  solver.h  threadpool.hpp
nlif/: __init__.py  parameter_optimisation.py  solver.py
nlif/cpp/simulator/: simulator.hpp
nlif/cpp/solver/: common.cpp  common.h  nlif_solver.cpp  nlif_solver_weights.cpp  qp.cpp  qp.hpp  threadpool_wrapper.hpp  two_comp_solver.cpp
nlif/internal/: graphviz.py
